--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
   "prettier.singleQuote": true,
   "prettier.semi": false,
   "prettier.printWidth": 100,
-  "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false
+  "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
